Updated: ReadMe.md now accurate toa Windows7 setup Added: styles and layout for Log Bugfix: log-list vertical heights for overflow-limited content.

--- a/src/less/log-list.less
+++ b/src/less/log-list.less
@@ -77,7 +77,7 @@
                 {
                     overflow: hidden;
                     with: 100%;
-                    height: 1.25em;
+                    height: 1.5em;
                     white-space: nowrap;
                 }
 
